--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "author": "VitaxSharper <v.banard@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "config": "^3.2.4",
     "express": "^4.17.1",
-    "mongoose": "^5.8.3"
+    "mongoose": "^5.8.3",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.0.2",
